# shotdeck-scraper

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  shotdeck_scraper.py
src/shotdeck_scraper/: __init__.py  cli.py  scraper.py
tests/: test_utils.py
