[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shotdeck-scraper"
version = "0.1.0"
description = "Scrape stills and metadata from Shotdeck using Selenium."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "selenium>=4.10",
  "openpyxl>=3.1",
]

[project.scripts]
shotdeck-scrape = "shotdeck_scraper.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
